# hackathon-low-profile

./: GetPuerto.py  LaTodopoderosa.py  LaTodopoderosa2LaVenganza.py  PCScreen.py  Pitch.docx  ScreenVentana.py  __init__.py  botonGeneraCaptura.py  conectandoDispositivo.py  conexion-USB.py  foto.py  generated_token.txt  hsbc.py  identifier.py  identifier2.py  intento.py  path.py  prueba.py  screen.py  size.py  testing.py  token.txt  ~$Pitch.docx
App/: AppDev.py  buildozer.spec  main.py  numgenerator.kv
App/bee/NumGenerator/: CHANGELOG  README.rst  pyproject.toml
App/bee/NumGenerator/src/NumGenerator/: __main__.py  app.py
App/bee/generator/: CHANGELOG  README.rst  pyproject.toml
App/bee/generator/src/generator/: app.py
PseudoTrash/: GetPuerto.py  LaTodopoderosa.py  PCScreen.py  Scrollear.py  botonGeneraCaptura.py  conexionADB.py  identifier.py  identifier2.py  intento.py
app/bee/RandomizerHackaton/: CHANGELOG  LICENSE  README.rst  pyproject.toml
app/bee/RandomizerHackaton/src/RandomizerHackaton/: __main__.py  app.py
procesadoDeImagenes/: procesamientoImagen.py
scrcpy-win64-v2.4/: desktop.ini
webapp/: app.py  token.txt
webapp/src/: LaTodopoderosa.py  ScreenVentana.py  abrirNav.py  conectandoDispositivo.py  conexion-USB.py  foto.py  generandoFichero.py  generated_token.txt  intento.py  principal.py  procesamientoImagen.py  screen.py
webapp/static/css/: styles.css
webapp/templates/: index.html  login.html  token_page.html
