[build-system]
requires = ["briefcase>=0.3.5"]
build-backend = "briefcase.build_system"

[tool.briefcase]
project_name = "Random Code Generator"
version = "0.0.1"
description = "An app that generates a random 6-digit code every 5 seconds."
author = "Tu Nombre"
author_email = "tu.email@example.com"
url = "https://tu-sitio-web.com"
license = "MIT"

requires = [
    "toga>=0.3.0.dev22"
]

[tool.briefcase.app.random_code]
formal_name = "Random Code Generator"
description = "An app that generates a random 6-digit code every 5 seconds."
sources = ["src/random_code"]

[tool.briefcase.app.random_code.macOS]
app_requires = [
    "toga-cocoa>=0.3.0.dev22"
]

[tool.briefcase.app.random_code.linux]
app_requires = [
    "toga-gtk>=0.3.0.dev22"
]

[tool.briefcase.app.random_code.windows]
app_requires = [
    "toga-winforms>=0.3.0.dev22"
]

[tool.briefcase.app.random_code.android]
app_requires = [
    "toga-android>=0.3.0.dev22"
]

[tool.briefcase.app.random_code.iOS]
app_requires = [
    "toga-iOS>=0.3.0.dev22"
]
